updated semverbot config - integrated mode detector into the semver mode APi - integrated mode detector into predict-version command

--- a/.semverbot.yaml
+++ b/.semverbot.yaml
@@ -5,7 +5,13 @@ git:
     'user.name': github-actions
   unshallow: true
 semver:
-  matchers:
-    'fix/': patch
-    'feature/': minor
-    'release/': major
+  modes:
+    detection:
+      patch:
+        - 'fix/'
+      minor:
+        - 'feature/'
+      major:
+        - 'release/'
+        - 'releae/'
+
