replaced unshallow config with git.tags.fetch config - added fetch flag - added git API for fetching tags - added persistent fetch flag to root command - added load flags method to bind flags after loading configs - added git.tags.fetch check and implementation - absence of a config file no longer throws errors

--- a/.semverbot.toml
+++ b/.semverbot.toml
@@ -1,5 +1,4 @@
 [git]
-unshallow = true
 
 [git.config]
 "user.email" = "github-actions@github.com"
@@ -7,6 +6,7 @@ unshallow = true
 
 [git.tags]
 prefix = "v"
+fetch = false
 
 [semver.modes.detection]
 patch = ["fix/"]
