removed semver.modes from the config - added semver.mode - documented configuration in readme

--- a/.semverbot.toml
+++ b/.semverbot.toml
@@ -9,10 +9,9 @@ prefix = "v"
 fetch = false
 
 [semver]
+mode = "auto"
 
-[semver.modes]
-
-[semver.modes.detection]
+[semver.detection]
 patch = ["fix/"]
 minor = ["feature/"]
 major = ["release/"]
