--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,4 +35,4 @@ jobs:
           echo current version: $CURRENT_RELEASE_VERSION
           echo next version: $NEXT_RELEASE_VERSION
           ./bin/sbot release version
-          git push origin $NEXT_RELEASE_VERSION
+          git push origin v$NEXT_RELEASE_VERSION
