removed fetch flag - added update command - added update version command - removed fetch config - added update version to pipeline - removed fetching git tags if configured from root command

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,9 +30,12 @@ jobs:
 
       - name: release
         run: |
+          ./bin/sbot update version
+
           CURRENT_RELEASE_VERSION=$(./bin/sbot get version)
           NEXT_RELEASE_VERSION=$(./bin/sbot predict version)
           echo current version: $CURRENT_RELEASE_VERSION
           echo next version: $NEXT_RELEASE_VERSION
+
           ./bin/sbot release version
           git push origin v$NEXT_RELEASE_VERSION
