--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,10 +32,8 @@ jobs:
         run: |
           ./bin/sbot update version
 
-          CURRENT_RELEASE_VERSION=$(./bin/sbot get version)
-          NEXT_RELEASE_VERSION=$(./bin/sbot predict version)
-          echo current version: $CURRENT_RELEASE_VERSION
-          echo next version: $NEXT_RELEASE_VERSION
+          echo "current version: $(./bin/sbot get version)"
+          echo "next version: $(./bin/sbot predict version)"
 
           ./bin/sbot release version
-          git push origin v$NEXT_RELEASE_VERSION
+          git push origin v$(./bin/sbot get version)
