update semverbot config - updated default semverbot config

--- a/.semverbot.toml
+++ b/.semverbot.toml
@@ -11,6 +11,6 @@ prefix = "v"
 mode = "auto"
 
 [semver.detection]
-patch = ["fix/"]
-minor = ["feature/"]
-major = ["release/"]
+patch = ["fix/", "[fix]"]
+minor = ["feature/", "[feature]"]
+major = ["release/", "[release]"]
