--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -28,7 +28,7 @@ jobs:
       - name: test
         run: make test
 
-      - name: release
+      - name: get version
         run: |
           ./bin/sbot update version
           echo "current version: $(./bin/sbot get version)"
