added sbot push documentation - integrated sbot push into readme examples - integrated sbot push into pipeline

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,4 +36,4 @@ jobs:
           echo "next version: $(./bin/sbot predict version)"
 
           ./bin/sbot release version
-          git push origin v$(./bin/sbot get version)
+          ./bin/sbot push version
