--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -30,4 +30,5 @@ jobs:
 
       - name: get version
         run: |
-          ./bin/sbot update version --verbose
+          ./bin/sbot update version
+          ./bin/sbot get version
