--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -23,7 +23,7 @@ jobs:
         run: make check
 
       - name: build
-        run: make build
+        run: make simple-build
 
       - name: test
         run: make test
