do full build in development as well

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -31,7 +31,7 @@ jobs:
         run: make check
 
       - name: build
-        run: make simple-build
+        run: make build
 
       - name: test
         run: make test
