--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [ main ]
 
+env:
+  NUSHELL_VERSION: 0.88.0
+  
 jobs:
   build:
     name: pipeline
@@ -15,6 +18,11 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.20.5
+
+      - name: set up nushell
+        uses: hustcer/setup-nu@v3.8
+        with:
+          version: ${{ env.NUSHELL_VERSION }}
 
       - name: provision
         run: make provision
