moved away from using git describe in building tasks - working with RELEASE_VERSION env var instead - refactored build tasks in makefile a bit -

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -24,11 +24,23 @@ jobs:
         with:
           version: ${{ env.NUSHELL_VERSION }}
 
+      - name: set up path
+        run: |
+          mkdir bin
+          echo "$(pwd)/bin" >> $GITHUB_PATH
+
       - name: provision
         run: make provision
 
       - name: check
         run: make check
+
+      - name: build prerelease
+        run: |
+          make build-prerelease
+          sbot update version --debug
+          release_version="$(sbot predict version --debug)"
+          echo "RELEASE_VERSION=${release_version}" >> $GITHUB_ENV
 
       - name: build
         run: make build
@@ -38,5 +50,4 @@ jobs:
 
       - name: get version
         run: |
-          ./bin/sbot update version --debug
-          ./bin/sbot get version --debug
+          sbot get version --debug
