--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: build
         run: |
           make build
-          mv bin/sbot-linux-amd64 bin/sbot
+          cp bin/sbot-linux-amd64 bin/sbot
           sbot version
 
       - name: release
