--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
 
 env:
+  GO_VERSION: 1.21
   NUSHELL_VERSION: 0.88.0
 
 jobs:
@@ -12,12 +13,13 @@ jobs:
     name: pipeline
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: set-up-go
-        uses: actions/setup-go@v2
+      - name: set up go
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.20.5
+          cache-dependency-path: go.sum
+          go-version: ${{ env.GO_VERSION }}
 
       - name: set up nushell
         uses: hustcer/setup-nu@v3.8
