--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,15 +40,15 @@ jobs:
       - name: test
         run: make test
 
-      - name: build-prerelease
+      - name: build prerelease
         run: |
           make build
           sbot version
           sbot update version --debug
 
-      - name: build-all
+      - name: build all
         run: |
-          make build-all
+          make build all
           cp bin/sbot-linux-amd64 bin/sbot
           sbot version
 
